[gd_scene load_steps=4 format=3 uid="uid://cpx7u6i0j32a7"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_h6fgk"]
[ext_resource type="Texture2D" uid="uid://ds3bi35q5230i" path="res://assets/art/ShotgunShell.png" id="1_pr6jn"]
[ext_resource type="Texture2D" uid="uid://dpsd7eqvmrsoh" path="res://assets/art/ThinGoldCoin.png" id="2_y5nod"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h6fgk")

[node name="HudCanvas" type="CanvasLayer" parent="."]

[node name="AmmoDisplay" type="Control" parent="HudCanvas"]
layout_mode = 3
anchors_preset = 0
offset_left = 32.0
offset_top = 64.0
offset_right = 72.0
offset_bottom = 104.0

[node name="AmmoSprite" type="Sprite2D" parent="HudCanvas/AmmoDisplay"]
scale = Vector2(0.333333, 0.333333)
texture = ExtResource("1_pr6jn")
metadata/_edit_lock_ = true

[node name="AmmoLabel" type="Label" parent="HudCanvas/AmmoDisplay"]
layout_mode = 0
offset_left = 33.0
offset_top = -11.0
offset_right = 73.0
offset_bottom = 12.0
metadata/_edit_lock_ = true

[node name="CoinDisplay" type="Control" parent="HudCanvas"]
layout_mode = 3
anchors_preset = 0
offset_left = 18.0
offset_top = 24.0
offset_right = 58.0
offset_bottom = 64.0

[node name="CoinSprite" type="Sprite2D" parent="HudCanvas/CoinDisplay"]
texture = ExtResource("2_y5nod")
region_enabled = true
region_rect = Rect2(0, 0, 48, 48)
metadata/_edit_lock_ = true

[node name="CoinLabel" type="Label" parent="HudCanvas/CoinDisplay"]
layout_mode = 0
offset_left = 22.0
offset_top = -8.0
offset_right = 62.0
offset_bottom = 15.0
metadata/_edit_lock_ = true
